fix: header elements overflow

--- a/css/mobile-styles.css
+++ b/css/mobile-styles.css
@@ -7,6 +7,7 @@
         right: 0;
         height: 25vh;
         z-index: 1000;
+        overflow-y: auto;
     }
 
     .header-placeholder {
@@ -93,7 +94,7 @@
     nav ul li {
         padding: 0.3125rem 0.625rem; /* 5px 10px */
     }
-
+    
 
     #avatar {
         width: 3.125rem; /* 50px */
